Add EventLogFileHandler, EventLog and PerformanceAnalyzerMetrics classes.
Signed-off-by: Filip Drobnjakovic <drobnjakovicfilip@gmail.com>