@@ -96,14 +96,16 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4jVersion}"
 
 
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.23.0'
     testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0'
     testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.23.0'
     testImplementation group: 'org.powermock', name: 'powermock-core', version: '2.0.0'
     testImplementation group: 'org.powermock', name: 'powermock-api-support', version: '2.0.0'
     testImplementation group: 'org.powermock', name: 'powermock-module-junit4-common', version: '2.0.0'
+    testImplementation group: 'org.javassist', name: 'javassist', version: '3.24.0-GA'
     testImplementation group: 'org.powermock', name: 'powermock-reflect', version: '2.0.0'
     testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.3'
+    testImplementation group: 'org.objenesis', name: 'objenesis', version: '3.0.1'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-library', version: '2.1'
     testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
     testImplementation group: 'junit', name: 'junit', version: "${junitVersion}"
@@ -155,6 +157,14 @@ task javadocJar(type: Jar) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
+tasks.withType(Test) {
+    jvmArgs('--add-opens=java.base/sun.nio.fs=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.nio.file=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.base/java.util=ALL-UNNAMED')
+    jvmArgs('--add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED')
+}
+
 publishing {
     publications {
         shadow(MavenPublication) {
